fix double scrollbar

--- a/src/renderer/pages/home/news_feed/news_dual_pane/news_dual_pane.module.css
+++ b/src/renderer/pages/home/news_feed/news_dual_pane/news_dual_pane.module.css
@@ -14,7 +14,6 @@
 .detailPane {
   overflow-y: auto;
   height: 100%;
-  padding: 16px 24px;
 }
 
 .detailEmpty {
